Landing page completed

--- a/app/index.html
+++ b/app/index.html
@@ -9,6 +9,7 @@
 
     {{content-for "head"}}
 
+    <link rel="stylesheet" href="assets/semantic.min.css">
     <link integrity="" rel="stylesheet" href="{{rootURL}}assets/vendor.css">
     <link integrity="" rel="stylesheet" href="{{rootURL}}assets/booking-app-frontend.css">
 
@@ -17,6 +18,8 @@
   <body>
     {{content-for "body"}}
 
+    <script src="https://code.jquery.com/jquery-3.4.0.slim.min.js"></script>
+    <script src="assets/semantic.min.js"></script>
     <script src="{{rootURL}}assets/vendor.js"></script>
     <script src="{{rootURL}}assets/booking-app-frontend.js"></script>
 
