--- a/app/index.html
+++ b/app/index.html
@@ -6,9 +6,11 @@
     <title>BookingAppFrontend</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <base href="/">
 
     {{content-for "head"}}
 
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <link rel="stylesheet" href="assets/semantic.min.css">
     <link integrity="" rel="stylesheet" href="{{rootURL}}assets/vendor.css">
     <link integrity="" rel="stylesheet" href="{{rootURL}}assets/booking-app-frontend.css">
@@ -19,6 +21,7 @@
     {{content-for "body"}}
 
     <script src="https://code.jquery.com/jquery-3.4.0.slim.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <script src="assets/semantic.min.js"></script>
     <script src="{{rootURL}}assets/vendor.js"></script>
     <script src="{{rootURL}}assets/booking-app-frontend.js"></script>
